@@ -1,3 +1,9 @@
+2019-04-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Hide optional arguments with default value
+	* Show "optional" as placeholder text in insert function dialog
+	* Nicer display of derivative in output
+
 2019-04-03 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix ignore system language on Windows
